fix layout issues

--- a/vuu-ui/packages/vuu-layout/src/stack/Stack.css
+++ b/vuu-ui/packages/vuu-layout/src/stack/Stack.css
@@ -25,6 +25,10 @@
   flex-direction: column;
 }
 
+.vuuTabs-tabPanel > * {
+  flex: 1 1 auto;
+}
+
 .vuuTabHeader {
   --saltTabs-activationIndicator-background: transparent;
   --saltToolbarField-marginTop: calc(var(--salt-size-unit) - 1px);
